# electronic_shop_prj

./: README.md  pyproject.toml  testing.py
main/: clases.py
tests/: test.py
