[tool.poetry]
name = "electronic-shop-prj"
version = "0.1.0"
description = ""
authors = ["Михаил <misga.yats@gmail.com>"]
readme = "README.md"
packages = [{include = "electronic_shop_prj"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

